add auctioneer address details
