# backend/openapi.yaml
@@ -869,6 +869,18 @@ components:
               readOnly: true
               allOf:
                 - $ref: "#/components/schemas/Account"
+                - type: object
+                  required:
+                    - addressFormatted
+                    - latitude
+                    - longitude
+                  properties:
+                    addressFormatted:
+                      type: string
+                    latitude:
+                      $ref: "#/components/schemas/Latitude"
+                    longitude:
+                      $ref: "#/components/schemas/Longitude"
             name:
               type: string
               maxLength: 100
@@ -1224,6 +1236,18 @@ components:
     Session:
       allOf:
         - $ref: "#/components/schemas/Account"
+        - type: object
+          required:
+            - addressFormatted
+            - latitude
+            - longitude
+          properties:
+            addressFormatted:
+              type: string
+            latitude:
+              $ref: "#/components/schemas/Latitude"
+            longitude:
+              $ref: "#/components/schemas/Longitude"
   responses:
     BadRequest:
       description: request format is invalid
